2018-04-xx 1.x.0 [xxxxxxx]
  + 
2018-04-01 1.3.0 [7bc9dff]
  + lifelines are created and removed automatically for timing, sequence and communication diagrams
  + lifelines are drawn and can be selected/edited
  + ports can be created/selected/edited and are drawn
2018-03-04 1.2.0 [78421df]
  + all relations to/from multiple classifier instances are drawn
2018-01-23 1.1.0 [086e559]
  + greyed-out classifiers also grey-out their contained features
  . sqlite updated from 3.10.2 to 3.21.0
  . Database format changed.
    A newer crystal_facet_uml can still open older database files (and immediately update the file format).
    Older crystal_facet_uml cannot open database files created or opened by a newer crystal_facet_uml!
  + relations where source and destination are identical are beautified
  + for comments and requirements, the description is shown
2018-01-03 1.0.0 [4262282]
  + F7 in navigation view moves child diagram up and parent down
  + The text export contains IDs
2017-12-26 0.20.0 [534b171]
  + navigation mode: a newly initialized database shows a quick guide
  + navigation mode: root diagram has sky-blue background
  + orange background color marks new-object and new-diagram modes
  + link to the home page is added in the man page and on the startup screen
  + The 2nd click on the about button removes the about message
  + Ctrl-X/C/V,DEL work as expected during text editing
  + edit mode: Pink-selects elements only at the second click
2017-12-10 0.19.0 [221effc]
  + The default-names of new classifiers match their type
  + default-types of new objects fit to the diagram type and to the origin-classifier type now.
  + default-names of new objects are unique, no duplicate name errors unless forced
  + In new object mode, clicking into a possible parent classifiers creates a new child (depending on type)
  + children of CONTAINMENT relations are automatically embraced by _any_ ancestor
  + nicer layout when parents embrace CONTAINED children