@@ -49,6 +49,7 @@ struct data_database_reader_struct {
     sqlite3_stmt *private_prepared_query_features_by_diagram_id;
     sqlite3_stmt *private_prepared_query_relationship_by_id;
     sqlite3_stmt *private_prepared_query_relationships_by_classifier_id;
+    sqlite3_stmt *private_prepared_query_relationships_by_feature_id;
     sqlite3_stmt *private_prepared_query_relationships_by_diagram_id;
 
     data_database_listener_t me_as_listener;  /*!< own instance of data_database_listener_t which wraps data_database_reader_db_change_callback */
@@ -330,6 +331,26 @@ data_error_t data_database_reader_get_relationships_by_classifier_id ( data_data
                                                                        data_relationship_t (*out_relationship)[],
                                                                        uint32_t *out_relationship_count
                                                                      );
+
+/*!
+ *  \brief reads all relationships of a feature from the database
+ *
+ *  This includes relationships where the feature is source-only, destination-only or both.
+ *
+ *  \param this_ pointer to own object attributes
+ *  \param feature_id id of the source(from) or destination(to) feature, must not be DATA_ID_VOID_ID.
+ *  \param max_out_array_size size of the array where to store the results. If size is too small for the actual result set, this is an error.
+ *  \param out_relationship array of relationships read from the database (in case of success)
+ *  \param out_relationship_count number of relationship records stored in out_relationship
+ *  \return DATA_ERROR_NONE in case of success, a negative value in case of error.
+ *          E.g. DATA_ERROR_NO_DB if the database is not open.
+ */
+data_error_t data_database_reader_get_relationships_by_feature_id ( data_database_reader_t *this_,
+                                                                    int64_t feature_id,
+                                                                    uint32_t max_out_array_size,
+                                                                    data_relationship_t (*out_relationship)[],
+                                                                    uint32_t *out_relationship_count
+                                                                  );
 
 /*!
  *  \brief reads all relationships of a diagram from the database
