@@ -1,5 +1,6 @@
-2018-04-xx 1.x.0 [xxxxxxx]
-  + 
+2018-05-xx 1.4.0 [xxxxxxx]
+  + the repair-database function can detect and repair broken focused_feature keys in diagramelements
+  + the repair-database function can detect and repair broken from/to_feature keys in relationships
 2018-04-01 1.3.0 [7bc9dff]
   + lifelines are created and removed automatically for timing, sequence and communication diagrams
   + lifelines are drawn and can be selected/edited
